DiD S11: fix grammar issue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -838,7 +838,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "I remember a time when I thought skeletons were repulsive, sickening things. I suppose it is only natural for the living to fear the most prominent figure of death. Even if I grew out of such a naive thought... I suppose I could not have expected Drogan and Dela to follow suit so easily. My family and friends, yes, but they were nothing but simpletons. Would that they tried to understand me instead of shunning me outright."
+            message= _ "I remember a time when I thought skeletons were repulsive, sickening things. I suppose it is only natural for the living to fear the most prominent figure of death. Even if I grew out of such a naive thought... I suppose I could not have expected Drogan and Dela to follow suit so easily. My family and friends, yes, but they were nothing but simpletons. Would that they had tried to understand me instead of shunning me outright."
         [/message]
 
         [message]
