DiD S11: replace invalid WML key

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -1623,7 +1623,9 @@
             radius=3
         [/remove_shroud]
         [lift_fog]
-            side=1
+            [filter_side]
+                side=1
+            [/filter_side]
             x,y=3,34
             radius=3
             multiturn=yes
@@ -1690,7 +1692,9 @@
             y=29-31,29-30
         [/remove_shroud]
         [lift_fog]
-            side=1
+            [filter_side]
+                side=1
+            [/filter_side]
             x=8-9,10
             y=29-31,29-30
             multiturn=yes
@@ -2868,7 +2872,9 @@ And the tongue of fire begets ashen repose.</i>"
             radius=6
         [/remove_shroud]
         [lift_fog]
-            side=1
+            [filter_side]
+                side=1
+            [/filter_side]
             x,y=17,7
             radius=6
             multiturn=yes
@@ -3215,7 +3221,7 @@ And the tongue of fire begets ashen repose.</i>"
                     x,y=10,7
                     animate=yes
                     passable=yes
-                    find_vacant=yes
+                    overwrite=no
                 [/unit]
                 [unit]
                     side=1
@@ -3223,7 +3229,7 @@ And the tongue of fire begets ashen repose.</i>"
                     x,y=11,7
                     animate=yes
                     passable=yes
-                    find_vacant=yes
+                    overwrite=no
                 [/unit]
 
                 {VARIABLE runes_activated 1}
@@ -3259,7 +3265,7 @@ And the tongue of fire begets ashen repose.</i>"
                         x,y=19,4
                         animate=yes
                         passable=yes
-                        find_vacant=yes
+                        overwrite=no
                     [/unit]
                     [unit]
                         side=1
@@ -3267,7 +3273,7 @@ And the tongue of fire begets ashen repose.</i>"
                         x,y=20,3
                         animate=yes
                         passable=yes
-                        find_vacant=yes
+                        overwrite=no
                     [/unit]
 
                     {VARIABLE runes_activated 1}
@@ -3304,7 +3310,7 @@ And the tongue of fire begets ashen repose.</i>"
                         x,y=21,5
                         animate=yes
                         passable=yes
-                        find_vacant=yes
+                        overwrite=no
                     [/unit]
                     [unit]
                         side=1
@@ -3312,7 +3318,7 @@ And the tongue of fire begets ashen repose.</i>"
                         x,y=23,5
                         animate=yes
                         passable=yes
-                        find_vacant=yes
+                        overwrite=no
                     [/unit]
 
                     {VARIABLE runes_activated 1}
@@ -3349,7 +3355,7 @@ And the tongue of fire begets ashen repose.</i>"
                         x,y=14,2
                         animate=yes
                         passable=yes
-                        find_vacant=yes
+                        overwrite=no
                     [/unit]
                     [unit]
                         side=1
@@ -3357,7 +3363,7 @@ And the tongue of fire begets ashen repose.</i>"
                         x,y=14,3
                         animate=yes
                         passable=yes
-                        find_vacant=yes
+                        overwrite=no
                     [/unit]
 
                     {VARIABLE runes_activated 1}
