DiD S11: gameplay adjustments

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -12,6 +12,18 @@
 
     {INTRO_AND_SCENARIO_MUSIC heroes_rite.ogg underground.ogg}
 
+    # This is a 3 part scenario that goes as follows (SPOILERS HERE)
+    # Part 1 - Malin completes the ritual that is his declension into lichdom
+    #       Gameplay - fight against ghouls+corpses, skeletons, then ghosts in that order
+    #       Stand on runes that will give you buffs that help you beat the ritual
+    # Part 2 - explore the new lair and complete some puzzles
+    #       Puzzles give some small dmg bonuses
+    #       You can regain health and get some exp from creeps, but be wary of the giant spider lurking somewhere
+    # Part 3 - Boss battle with fire dragon
+    #       Fight against respawning fire elementals, step onto runes to gain some free units (differs depending on rune)
+    #       You get 3 ghost-type units (from recall list) that will help you
+    #       When you defeat the dragon, you will get a special skeletal dragon with feeding
+
     [story]
         [part]
             story= _ "<i>“To become a lich, one must first die.”</i>"
@@ -1057,7 +1069,7 @@
         [/message]
 
         [random_placement]
-            num_items={ON_DIFFICULTY 4 4 5}
+            num_items={ON_DIFFICULTY 3 3 4}
             variable=loc
             min_distance=3
             [filter_location]
@@ -1104,8 +1116,8 @@
 
         {MODIFY_UNIT (side=2) attacks_left 0}
         {MODIFY_UNIT (side=2) moves 0}
-        {MODIFY_UNIT (side=2) max_moves 3}
-        {MODIFY_UNIT (type=Wraith) max_moves 2}
+        {MODIFY_UNIT (side=2) max_moves 2}
+        #{MODIFY_UNIT (type=Wraith) max_moves 2}
 
         [random_placement]
             num_items=1
@@ -1860,7 +1872,7 @@
             level=3
         [/unit]
 
-        {MODIFY_UNIT (type=Giant Spider) max_moves 4}
+        {MODIFY_UNIT (type=Giant Spider) max_moves 3}
 
         # Previously recruited and new adepts can now also become liches
         [lua]
@@ -2937,16 +2949,16 @@ And the tongue of fire begets ashen repose.</i>"
             side=2
             x,y=17,7
 #ifdef EASY
-            hitpoints=140
-            max_hitpoints=140
+            hitpoints=150
+            max_hitpoints=150
 #endif
 #ifdef NORMAL
-            hitpoints=170
-            max_hitpoints=170
+            hitpoints=190
+            max_hitpoints=190
 #endif
 #ifdef HARD
-            hitpoints=200
-            max_hitpoints=200
+            hitpoints=230
+            max_hitpoints=230
 #endif
             unrenamable=yes
             canrecruit=yes
@@ -3426,7 +3438,7 @@ And the tongue of fire begets ashen repose.</i>"
 
         [message]
             speaker=Xanthric
-            message= _ "It is... so... cold..."
+            message= _ "<i>I feel... so... cold...</i>"
         [/message]
 
         [kill]
@@ -3506,6 +3518,7 @@ And the tongue of fire begets ashen repose.</i>"
         [/delay]
 
         [unit]
+            id=Xanthric
             name= _ "Xanthric"
             type=Skeletal Dragon
             side=1
@@ -3513,6 +3526,20 @@ And the tongue of fire begets ashen repose.</i>"
             unrenamable=yes
             [modifications]
                 {TRAIT_LOYAL}
+                [object]
+                    take_only_once=yes
+                    silent=yes
+                    duration=forever
+                    [filter]
+                        id=Xanthric
+                    [/filter]
+                    [effect]
+                        apply_to=new_ability
+                        [abilities]
+                            {ABILITY_FEEDING}
+                        [/abilities]
+                    [/effect]
+                [/object]
             [/modifications]
             {IS_LOYAL}
         [/unit]
