--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Fighter.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Fighter.cfg
@@ -20,7 +20,7 @@
     advances_to=Quenoth Warrior,Quenoth Flanker
     cost=15
     usage=fighter
-    description= _ "Long ago, during more prosperous times, Elven warriors favored the use of swords as more elegant, versatile weapons compared to other melee armaments. However, in recent times, the dearth of supplies for smithing has reduced the availability of blade-crafting, necessitating the fashioning of cheaper, more easily repaired weaponry. Quenoth Fighters are the most numerous of Elven warriors and are remarkably skilled in coordinated groups, where they can counteract the lack of more sophisticated weaponry."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FORMATION}+{SPECIAL_NOTES_FIRSTSTRIKE}
+    description= _ "Long ago, during more prosperous times, Elven warriors favored the use of swords as more elegant, versatile weapons compared to other melee armaments. However, in recent times, the dearth of supplies for smithing has reduced the availability of blade-crafting, necessitating the fashioning of cheaper, more easily repaired weaponry. Quenoth Fighters are remarkably skilled in coordinated groups, where they can counteract the lack of more sophisticated weaponry by forming robust spear ranks capable of repelling nearly any frontal assault."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FORMATION}+{SPECIAL_NOTES_FIRSTSTRIKE}
     die_sound={SOUND_LIST:ELF_HIT}
     [abilities]
         {ABILITY_FORMATION}
