--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Marksman.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Marksman.cfg
@@ -19,7 +19,7 @@
     {AMLA_DEFAULT}
     cost=18
     usage=scout
-    description= _ "In times past, the elves’ supremacy at archery was unquestioned among the other races of the Great Continent. With the relative rarity of archery after the Fall, however, the skills of the few remaining elven bowmen became suspect, even among their own brethren. Forgetting that archery already was less viable in a land with scarce cover, many began to believe that the new archers were less adept than their ancestors, enough so that archery was more of an outdated relic than a practical tool for battle.
+    description= _ "In times past, the elves’ supremacy at archery was unquestioned among the other races of the Great Continent. With archery being less viable in a land of scarce cover, however, the skills of the few remaining elven bowmen became suspect, to the point that even their brethren began to believe that archery was more of an outdated relic than a practical tool for battle.
 
 A simple glance at a Quenoth Marksman in action would be enough to dispel this foolish train of thought. Capable of the same legendary feats as their ancestors, these master archers can achieve the same speed and precision as the Sharpshooters of old, all while in full gallop on horseback."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DISENGAGE}+{SPECIAL_NOTES_MARKSMAN}
     die_sound=horse-die.ogg
