--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Scout.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Scout.cfg
@@ -15,7 +15,7 @@
     advances_to=Quenoth Pathfinder,Quenoth Archer
     cost=17
     usage=scout
-    description= _ "Riding the graceful, agile dustboks, Quenoth Scouts move with unmatched speed across the sands. Their maneuverability and skill with sword and sling are useful skills to harry enemies, although they are relatively weak in direct combat and are primarily used as hunters and patrolmen."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DISENGAGE}
+    description= _ "Riding the graceful, agile dustboks, Quenoth Scouts move with unmatched speed across the sands. Their practiced skill with sword and sling are useful abilities to harry enemies and allows them to act as effective hunters and patrolmen."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DISENGAGE}
     die_sound=horse-die.ogg
     [abilities]
         {ABILITY_DISENGAGE}
