--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -34,11 +34,7 @@
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
                 [part]
-                    story= _ "He needs none. Philosophy only begets misery. Violence and savagery have been the essence of his existence, the forces that once controlled his life, the ones unrelinquished in undeath. Better to simply kill, without deliberation, without mercy, for what use is there to dwell on any alternative? He is not one for regrets. He has never been."
-                    {STORYTXT_BACKGROUND end.jpg}
-                [/part]
-                [part]
-                    story= _ "Rumors circulate of a lich that preys on scouting patrols. A hero, gathering his loyal troops to him, decides to put an end to the evil."
+                    story= _ "He needs none. Philosophy only begets misery. Violence and savagery have been the essence of his existence, the forces that once controlled his life, the ones unrelinquished in undeath. Better to simply kill without deliberation, for what use is there to dwell on any alternative? He is not one for regrets. He has never been."
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
             [/then]
@@ -60,10 +56,6 @@
                     # po: More text from the epilogue of Secrets of the Ancients
                     story= _ "<i>“As for me, I will make my journal conspicuous on this battlefield. I suspect that most will fear it enough to try to destroy it, but I have placed several wards on my journal to protect it. This way, it should survive long enough to make its way into the hands of someone more open-minded. Tath, in particular, is home to many mages. It only takes one who is willing to learn...”</i>"
                     {STORYTXT_BACKGROUND book.jpg}
-                [/part]
-                [part]
-                    story= _ "Rumors circulate of a lich that preys on scouting patrols. A hero, gathering his loyal troops to him, decides to put an end to the evil."
-                    {STORYTXT_BACKGROUND end.jpg}
                 [/part]
             [/then]
         [/if]
@@ -88,10 +80,6 @@
                     story= _ "Still, despite his misgivings about being manipulated, he feels that he can learn something from the book. Orcs had only ever been half of the story — the other had been his own people being unable to accept his use of dark magic. But, if he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? If enough people began to view necromancy as another magical art rather than only a corrupting power, could it eventually be accepted in society?"
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
-                [part]
-                    story= _ "Rumors circulate of a lich who preys on scouting patrols. A hero, gathering his loyal troops to him, decides to put an end to the evil."
-                    {STORYTXT_BACKGROUND end.jpg}
-                [/part]
             [/then]
         [/if]
         [if]
@@ -105,12 +93,12 @@
                     story= _ "If he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? Would the author’s plan actually work, or would people continue to view necromancy as only a corrupting power? One voice tells him that being accepted by society should not be of any concern to him. Another says that it doesn’t hurt to try. He does not come to any conclusions, but a copy of the tome sits there on a shelf in his lair, waiting to be taken."
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
-                [part]
-                    story= _ "Rumors circulate of a lich who preys on scouting patrols. A hero, gathering his loyal troops to him, decides to put an end to the evil."
-                    {STORYTXT_BACKGROUND end.jpg}
-                [/part]
             [/then]
         [/if]
+        [part]
+            story= _ "Rumors circulate of a lich who preys on scouting patrols. A hero, gathering his loyal troops to him, decides to put an end to the evil."
+            {STORYTXT_BACKGROUND end.jpg}
+        [/part]
     [/story]
 
     {DID_TRACK {JOURNEY_12_NEW}}
@@ -402,6 +390,7 @@
 
                             [message]
                                 speaker=Too Foolish Hero
+                                # po: the text that the "Too Foolish Hero" speaks is identical to that in the start event and can probably be copied over
                                 message= _ "Your doom is at hand, lich! It is nigh time you answered for your evil crimes!"
                             [/message]
 
@@ -463,7 +452,6 @@
 
                             [message]
                                 speaker=Too Foolish Hero
-                                # po: the text that the "Too Foolish Hero" speaks is identical to that in the start event and can probably be copied over
                                 message= _ "You have preyed on too many of my men. Our territory will be much more secure without your undead pestering us."
                             [/message]
 
@@ -1042,21 +1030,6 @@
             {VARIABLE_CONDITIONAL timesForever greater_than_equal_to 3}
             [then]
                 {PLACE_IMAGE (items/book5.png) 17 27}
-                {PLACE_IMAGE (items/book2.png) 6 29}
-
-                [event]
-                    name=moveto
-                    first_time_only=yes
-                    [filter]
-                        x,y=6,29
-                        id=Mal Keshar
-                    [/filter]
-
-                    [message]
-                        speaker=Mal Keshar
-                        message= _ "There is a journal here."
-                    [/message]
-                [/event]
 
                 [event]
                     name=moveto
@@ -1159,7 +1132,7 @@
                             [message]
                                 role=speakinghero
                                 # po: "faerie fire" as in the elvish sylph's attack
-                                message= _ "It must be connected to the lich’s power somehow. Perhaps if we burn it with faerie fire, the lich will be destroyed. Let us take it and retreat."
+                                message= _ "It must be connected to the lich’s power. Perhaps if we burn it with faerie fire, the lich will be destroyed. Let us take it and retreat."
                             [/message]
                         [/case]
 
@@ -1321,7 +1294,7 @@
                         value=human
                         [message]
                             speaker=Mal Keshar
-                            message= _ "Darkness descends... and I..."
+                            message= _ "Slain by those who were once my countrymen..."
                         [/message]
 
                         [kill]
@@ -1389,22 +1362,12 @@
 
                         [message]
                             role=second
-                            message= _ "He wanted to be a tyrant, just like the king of Wesnoth. How dreadful."
+                            message= _ "So he was an evil tyrant. How dreadful."
                         [/message]
 
                         [message]
                             role=speakinghero
-                            message= _ "Yes, to be oppressed by a tyrant is a terrible thing, whether it be a lich or a king. This is why we go our own path, as outlaws. Although, I suppose this lich must have been a pariah as well."
-                        [/message]
-
-                        [message]
-                            role=second
-                            message= _ "An evil one, unlike us."
-                        [/message]
-
-                        [message]
-                            role=speakinghero
-                            message= _ "Yes, definitely. Anyway, there is no use in dwelling upon one so wicked. Let us go."
+                            message= _ "Probably. Anyway, there is no use in dwelling upon one so wicked. Let us go."
                         [/message]
                     [/case]
 
@@ -1520,18 +1483,24 @@
                         [if]
                             [variable]
                                 name=x1
-                                numerical_equals=6
+                                numerical_equals=17
                             [/variable]
                             [and]
                                 [variable]
                                     name=y1
-                                    numerical_equals=29
+                                    numerical_equals=27
                                 [/variable]
                             [/and]
+							[and]
+								[variable]
+									name=timesForever
+									greater_than=4
+								[/variable]
+							[/and]
                             [then]
                                 [message]
                                     role=second
-                                    message= _ "Boss, look! There’s a shiny book here!"
+                                    message= _ "Boss, look! The lich dropped a shiny book!"
                                 [/message]
 
                                 [message]
@@ -1541,12 +1510,16 @@
 
                                 [message]
                                     role=second
-                                    # po: The speaker describes the coat of arms that is the logo of Wesnoth (the game).
-                                    # po: The speaker does not know the proper terminology of heraldic blazons, but does know the proper names of various types of swords.
-                                    # po: "ancient tongue" alludes to the use of Latin for European heraldic mottos. The use of italics likewise alludes to italicizing Latin phrases used in English texts.
-                                    message= _ "I don’t know, but there’s a coat of arms on the front. It’s a shield depicting the Sceptre of Fire in gold surrounded by a black band, superimposed on a pair of arming swords crossed in a saltire. Below it, there’s an inscription in an ancient tongue that says:
+                                    message= _ "I don’t know, but it looks like someone wrote something inside! It says:"
+                                [/message]
 
-<i>No orcs were harmed in the making of these accounts.</i>"
+                                [message]
+                                    speaker=narrator
+                                    image=items/book2.png
+                                    # po: hahaha is Zephrin laughing
+                                    message= _ "<i>Today, that stupid memory crept up on me again. It was that time at the Academy when Zephrin and I were arguing about orcs. I still remember that hoarse voice of his telling me, ‘Fun story, Malin, but you really should put a disclaimer. You know, to make sure everyone understands no orcs were harmed in the making of this story, hahaha.’
+
+I can still hear his infernal cackling ringing in my head. Sure thing, Zephrin, right... like my whole life was some sort of work of fiction!</i>"
                                 [/message]
 
                                 [message]
@@ -1574,8 +1547,16 @@
             [/then]
 
             # Normal defeat condition before sufficient repetitions
+			# putting the HERODEATH_MALIN_LICH macro here doesn't seem to work
             [else]
-                {HERODEATH_MALIN_LICH}
+                [message]
+                    speaker=unit
+                    message= _ "Then my battle against the orcs is lost!"
+                [/message]
+
+                [endlevel]
+                    result=defeat
+                [/endlevel]
             [/else]
         [/if]
     [/event]
