--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: cpp
 sudo:     required
 
-addons:
-  apt:
-    packages:
-      - expect-dev # for unbuffer
-      
 services:
     - docker
 
@@ -46,8 +41,7 @@ install:
     - . ./utils/travis/steps/install.sh
 
 script:
-    - bash -c 'echo "$TERM"; tput setaf 1; echo red; tput sgr0; echo normal'
-    - unbuffer ./utils/travis/steps/script.sh
+    - ./utils/travis/steps/script.sh
 
 notifications:
     email: false
