DiD S12: dialogue and gold adjustments

--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -34,7 +34,7 @@
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
                 [part]
-                    story= _ "He needs none. Philosophy only begets misery. Violence and savagery have been the essence of his existence, the forces that once controlled his life, the ones unrelinquished in undeath. Better to simply kill without deliberation, for what use is there to dwell on any alternative? He is not one for regrets. He has never been."
+                    story= _ "He needs none. Philosophy only begets misery. Violence and savagery have been the essence of his existence, the forces that once controlled his life, the ones unrelinquished in undeath. Better to simply kill without deliberation, for what use is there to dwell on any alternative? He has never been one for regrets."
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
             [/then]
@@ -77,7 +77,7 @@
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
                 [part]
-                    story= _ "Still, despite his misgivings about being manipulated, he feels that he can learn something from the book. Orcs had only ever been half of the story — the other had been his own people being unable to accept his use of dark magic. But, if he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? If enough people began to view necromancy as another magical art rather than only a corrupting power, could it eventually be accepted in society?"
+                    story= _ "Still, despite his misgivings about being manipulated, he feels that he can learn something from the book. Orcs had only ever been half of the story — the other had been his own people being unable to accept his use of dark magic. But, if he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? If enough people began to view necromancy as merely another magical art, could it eventually be accepted in society?"
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
             [/then]
@@ -90,7 +90,7 @@
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
                 [part]
-                    story= _ "If he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? Would the author’s plan actually work, or would people continue to view necromancy as only a corrupting power? One voice tells him that being accepted by society should not be of any concern to him. Another says that it doesn’t hurt to try. He does not come to any conclusions, but a copy of the tome sits there on a shelf in his lair, waiting to be taken."
+                    story= _ "If he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? Would the author’s plan actually work, or would people continue to view necromancy as only a corrupting power? One voice tells him that being accepted by society should not be of any concern to him. Another says that it would not harm him to try. He does not come to any conclusions, but a copy of the tome sits there in his lair, waiting to be taken."
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
             [/then]
@@ -660,11 +660,11 @@
                         hidden=no
                         team_name=enemies
 #ifdef EASY
-                        gold="$(150 + 40 * $timesForever)"
+                        gold="$(140 + 40 * $timesForever)"
                         income="$(5 + 1 * $timesForever)"
 #endif
 #ifdef NORMAL
-                        gold="$(175 + 50 * $timesForever)"
+                        gold="$(170 + 50 * $timesForever)"
                         income="$(6 + 2 * $timesForever)"
 #endif
 #ifdef HARD
@@ -817,11 +817,11 @@
             income="$(5 + 5 * $timesForever)"
 #endif
 #ifdef NORMAL
-            gold="$(225 + 50 * $timesForever)"
+            gold="$(230 + 50 * $timesForever)"
             income="$(6 + 6 * $timesForever)"
 #endif
 #ifdef HARD
-            gold="$(250 + 60 * $timesForever)"
+            gold="$(260 + 60 * $timesForever)"
             income="$(7 + 7 * $timesForever)"
 #endif
             [ai]
@@ -1207,7 +1207,7 @@
                     [story]
                         title= _ "Epilogue"
                         [part]
-                            story= _ "The foolish hero was tricked into believing both that the book could be destroyed, and that the lich might be weakened by doing so."
+                            story= _ "The foolish hero was tricked, and left believing both that the book could be destroyed, and that the lich might be weakened by doing so."
                             {STORYTXT_BACKGROUND end.jpg}
                         [/part]
                         [part]
@@ -1314,17 +1314,7 @@
 
                         [message]
                             role=speakinghero
-                            message= _ "No more than a power-hungry mage who selfishly sought to abuse the others around him for his own gain. Necromancers are all the same. Their kind is only ever a pure evil."
-                        [/message]
-
-                        [message]
-                            role=second
-                            message= _ "Aye, it is hard to imagine what could drive someone to pursue such depravity."
-                        [/message]
-
-                        [message]
-                            role=speakinghero
-                            message= _ "It matters not. Let us return home; the town will need us to help defend against the orc raids."
+                            message= _ "It matters not. He embraced death over life, and thus relinquished his right to our mercy. Let us return home; the town will need us to help defend against the orc raids."
                         [/message]
 
                         [message]
@@ -1491,12 +1481,12 @@
                                     numerical_equals=27
                                 [/variable]
                             [/and]
-							[and]
-								[variable]
-									name=timesForever
-									greater_than=4
-								[/variable]
-							[/and]
+                            [and]
+                                [variable]
+                                    name=timesForever
+                                    greater_than=5
+                                [/variable]
+                            [/and]
                             [then]
                                 [message]
                                     role=second
@@ -1547,7 +1537,7 @@ I can still hear his infernal cackling ringing in my head. Sure thing, Zephrin, 
             [/then]
 
             # Normal defeat condition before sufficient repetitions
-			# putting the HERODEATH_MALIN_LICH macro here doesn't seem to work
+            # putting the HERODEATH_MALIN_LICH macro here doesn't seem to work
             [else]
                 [message]
                     speaker=unit
