--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -90,7 +90,7 @@
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
                 [part]
-                    story= _ "If he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? Would the author’s plan actually work, or would people continue to view necromancy as only a corrupting power? One voice tells him that being accepted by society should not be of any concern to him. Another says that it would not harm him to try. He does not come to any conclusions, but a copy of the tome sits there in his lair, waiting to be taken."
+                    story= _ "If he allowed a foolish hero to take a copy of the book, would others eventually follow in his footsteps? Would the author’s plan actually work, or would people continue to view necromancy as only a corrupting power? One voice tells him that being accepted by society should not be of any concern to him. Another says that it would not harm him to try. He does not come to any conclusions, but a slightly embellished copy of the tome sits there in his lair, waiting to be taken."
                     {STORYTXT_BACKGROUND end.jpg}
                 [/part]
             [/then]
@@ -1314,7 +1314,7 @@
 
                         [message]
                             role=speakinghero
-                            message= _ "It matters not. He embraced death over life, and thus relinquished his right to our mercy. Let us return home; the town will need us to help defend against the orc raids."
+                            message= _ "It matters not. He embraced death over life, and thus relinquished his right to our mercy. Let us return home; the town will need us to help defend against the orcish raids."
                         [/message]
 
                         [message]
