--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -2220,7 +2220,7 @@
                     [else]
                         [message]
                             speaker=unit
-                            message= _ "What you doing back here? Nasty dwarves are to the north, no dwarves this way. Go back and fight bravely."
+                            message= _ "What are you doing back here? The trolls hide in the southern tunnels, not this way."
                         [/message]
                     [/else]
                 [/switch]
