UtBS: separate Quenoth Youth descriptions for single units

--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Youth.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Youth.cfg
@@ -472,12 +472,16 @@ _"Nym is Kaleh’s childhood friend, a young, rebellious lady with quick wits an
         icon=attacks/bow-elven.png
     [/attack]
     {KALEH_ANIMATIONS}
+    [male]
+        description={KALEH_DESCRIPTION}
+    [/male]
     [female]
         gender=female
         name= _ "female^Quenoth Youth"
         image="units/quenoth/nym.png"
         profile=portraits/nym.png
         die_sound={SOUND_LIST:ELF_FEMALE_HIT}
+        description={NYM_DESCRIPTION}
         {NYM_ANIMATIONS}
     [/female]
     {QUENOTH_YOUTH_ADVANCEMENTS ()}
@@ -525,12 +529,16 @@ _"Nym is Kaleh’s childhood friend, a young, rebellious lady with quick wits an
         icon=attacks/bow-elven.png
     [/attack]
     {KALEH_ANIMATIONS}
+    [male]
+        description={KALEH_DESCRIPTION}
+    [/male]
     [female]
         gender=female
         name= _ "female^Quenoth Youth"
         image="units/quenoth/nym.png"
         profile=portraits/nym.png
         die_sound={SOUND_LIST:ELF_FEMALE_HIT}
+        description={NYM_DESCRIPTION}
         {NYM_ANIMATIONS}
     [/female]
     {QUENOTH_YOUTH_ADVANCEMENTS ()}
@@ -578,12 +586,16 @@ _"Nym is Kaleh’s childhood friend, a young, rebellious lady with quick wits an
         icon=attacks/bow-elven.png
     [/attack]
     {KALEH_ANIMATIONS}
+    [male]
+        description={KALEH_DESCRIPTION}
+    [/male]
     [female]
         gender=female
         name= _ "female^Quenoth Youth"
         image="units/quenoth/nym.png"
         profile=portraits/nym.png
         die_sound={SOUND_LIST:ELF_FEMALE_HIT}
+        description={NYM_DESCRIPTION}
         {NYM_ANIMATIONS}
     [/female]
     {QUENOTH_YOUTH_ADVANCEMENTS {XP_INCREASE_EFFECT}}
