DiD S5: fix typo

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -187,7 +187,7 @@
             side=1
             [objective]
                 condition=win
-                description= _ "Kill the orc leaders"
+                description= _ "Kill the orcish leaders"
             [/objective]
             [objective]
                 condition=lose
