DiD S11: fix typo

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -3549,7 +3549,7 @@ And the tongue of fire begets ashen repose.</i>"
 
         [message]
             speaker=Mal Keshar
-            message= _ "Excellent! My will is even strong enough to conquer a dragon. None can stand against me any longer! To those who cursed me prior: I spit at thee! For I am Mal Keshar the Damned, spurned by all all men, forsaken by all those who live and draw breath! I laugh, for now, you are all naught but remains and dust, and I live on, alone..."
+            message= _ "Excellent! My will is even strong enough to conquer a dragon. None can stand against me any longer! To those who cursed me prior: I spit at thee! For I am Mal Keshar the Damned, spurned by all men, forsaken by all who live and draw breath! I laugh, for now, you are all naught but remains and dust, and I live on, alone..."
         [/message]
 
         [endlevel]
