--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -1508,7 +1508,7 @@
                                     image=items/book2.png
                                     # po: hahaha is Zephrin laughing
 									# po: this line sounds very "modern-day" but that's intentional because it's an easter egg, not meant to be taken strictly at face value
-                                    message= _ "<i>That stupid memory crept up on me again today. It was that time at the Academy when Zephrin and I were arguing about orcs. I still remember that hoarse voice of his telling me, ‘Fun story, Malin, but you really should put a disclaimer. You know, to make sure everyone understands no orcs were harmed in the making of this story, hahaha.’
+                                    message= _ "<i>That stupid memory came back to bother me again today. It was that time at the Academy when Zephrin and I were arguing about orcs. I still remember that hoarse voice of his telling me, ‘Fun story, Malin, but you really should put a disclaimer. You know, to make sure everyone understands no orcs were harmed in the making of this story, hahaha.’
 
 I can still hear his infernal cackling ringing in my head. Sure thing, Zephrin, right... like my whole life was some sort of work of fiction!</i>"
                                 [/message]
@@ -1542,7 +1542,7 @@ I can still hear his infernal cackling ringing in my head. Sure thing, Zephrin, 
             [else]
                 [message]
                     speaker=unit
-                    message= _ "Then my battle against the orcs is lost!"
+                    message= _ "... Then my battle against the orcs is lost!"
                 [/message]
 
                 [endlevel]
