DiD S1: word choice

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -54,7 +54,7 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "Drogan, the captain of the guard, replied, <i>“Nay, you surely know that the penalty for necromancy is death. However, seeing that you have saved our village, we will allow you to rest here for a few days. Upon your departure, however, you are banished from Parthyn. Should you return, we will attack you on sight.”</i>"
+            story= _ "Drogan, the captain of the guard, replied, <i>“Nay, you surely know that the penalty for necromancy is death. Seeing that you have saved our village, however, we will allow you to rest here for a few days. Nevertheless, upon your departure, you are banished from Parthyn. Should you return, we will attack you on sight.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
