Revert "THoT S12: use new masked ulfserker and berserker units"
This reverts commit e04686b39eab9b80962ff09a5da4254ad588dca4.

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
@@ -31,7 +31,7 @@
     [/side]
 
 #define RECRUITS_MASKED_DWARVES
-    recruit="Dwarvish Masked Fighter, Dwarvish Masked Steelclad, Dwarvish Masked Thunderer, Dwarvish Masked Thunderguard, Dwarvish Masked Ulfserker, Dwarvish Masked Berserker, Dwarvish Masked Guardsman, Dwarvish Masked Stalwart"
+    recruit="Dwarvish Masked Fighter, Dwarvish Masked Steelclad, Dwarvish Masked Thunderer, Dwarvish Masked Thunderguard, Dwarvish Ulfserker, Dwarvish Berserker, Dwarvish Masked Guardsman, Dwarvish Masked Stalwart"
 #enddef
 
 #define MASKED_DWARF TYPE X Y
