--- a/data/campaigns/Northern_Rebirth/utils/herodeaths.cfg
+++ b/data/campaigns/Northern_Rebirth/utils/herodeaths.cfg
@@ -145,7 +145,8 @@
 #define NR_WHITE_MAGE_RESPAWN_AT HUB_CANDIDATE
     # Find a respawn point, starting within 1 hex of the candidate,
     # and increading in range if no suitable hex is found.
-    # Tallin will be the hub candidate if the specified unit is still jailed
+    # Tallin is always the hub candidate now because respawning at each other
+    # causes illogical and hard to balance gameplay
     [find_respawn_point]
         respawn_near={HUB_CANDIDATE}
         variable=respawn_point
@@ -319,7 +320,7 @@
             [/case]
         [/switch]
 
-        {NR_WHITE_MAGE_RESPAWN_AT (Father Morvin)}
+        {NR_WHITE_MAGE_RESPAWN_AT (Tallin)}
 
         [switch]
             variable=death_dialog_index_thera
@@ -564,7 +565,7 @@
             [/case]
         [/switch]
 
-        {NR_WHITE_MAGE_RESPAWN_AT (Sister Thera)}
+        {NR_WHITE_MAGE_RESPAWN_AT (Tallin)}
 
         [switch]
             variable=death_dialog_index_morvin
@@ -701,7 +702,7 @@
             id=Sister Thera
         [/filter]
 
-        {NR_WHITE_MAGE_RESPAWN_AT (Father Morvin)}
+        {NR_WHITE_MAGE_RESPAWN_AT (Tallin)}
     [/event]
 
     [event]
@@ -711,7 +712,7 @@
             id=Father Morvin
         [/filter]
 
-        {NR_WHITE_MAGE_RESPAWN_AT (Sister Thera)}
+        {NR_WHITE_MAGE_RESPAWN_AT (Tallin)}
     [/event]
 #enddef
 
