NR: adjust gold if Krash is dead

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -344,6 +344,25 @@
         [recall]
             id="Ro'Sothian"
         [/recall]
+
+        # give player extra gold if they do not have krash
+        [if]
+            [not]
+                [have_unit]
+                    id=Krash
+                [/have_unit]
+            [/not]
+            [then]
+                [gold]
+                    side=1
+                    amount={ON_DIFFICULTY 150 125 100}
+                [/gold]
+                [gold]
+                    side=2,3,4,5
+                    amount={ON_DIFFICULTY -125 -100 -75}
+                [/gold]
+            [/then]
+        [/if]
     [/event]
 
     [event]
