--- a/data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg
@@ -169,10 +169,16 @@
                     terrain=Mm
                 [/terrain]
 
+                # adjust gold if no krash
                 [gold]
                     side=1
-                    amount=200
+                    amount={ON_DIFFICULTY 250 200 150}
                 [/gold]
+                [gold]
+                    side=2,3,4,5,6
+                    amount={ON_DIFFICULTY -125 -100 -75}
+                [/gold]
+                {CAPTURE_VILLAGES 1 30 3 5}
             [/then]
             [else]
                 {CAPTURE_VILLAGES 7 30 3 5}
