--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -296,6 +296,12 @@
                     side=4
                     hidden=yes
                 [/modify_side]
+
+                # give gold if no krash
+                [gold]
+                    side=1,5
+                    amount={ON_DIFFICULTY 300 275 250}
+                [/gold]
             [/then]
         [/if]
 
