NR: adjust gold if Krash is dead

--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -298,6 +298,12 @@
                     sie=4
                     hidden=yes
                 [/modify_side]
+
+                # give gold if no krash
+                [gold]
+                    side=1,5
+                    amount={ON_DIFFICULTY 300 275 250}
+                [/gold]
             [/then]
         [/if]
 
