--- a/data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg
@@ -417,8 +417,9 @@
                     side=7
                     type=Troll,Troll Whelp,Ogre,Young Ogre,Mage,Red Mage,Gryphon
                 [/allow_recruit]
+                # dwarves also get gold if no krash, since it's much harder to defend them
                 [gold]
-                    side=9
+                    side=7,8
                     amount=400
                 [/gold]
                 [modify_side]
@@ -494,7 +495,7 @@
                     type=Troll,Troll Whelp,Ogre,Young Ogre,Mage,Red Mage,Gryphon
                 [/allow_recruit]
                 [gold]
-                    side=9
+                    side=8,9
                     amount=400
                 [/gold]
                 [modify_side]
