NR S1: update incorrect comment

--- a/data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg
@@ -315,7 +315,7 @@
         [/message]
     [/event]
 
-    # Spawn trolls from the caves, 2 whelps and one normal.
+    # Spawn trolls from the caves, 2 whelps
     [event]
         name=moveto
         [filter]
