--- a/data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg
+++ b/data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg
@@ -193,9 +193,9 @@ He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk cowered in
         # wmllint: local spelling Bramwythl
         {UNIT_PETRIFY "Elder Wose" _"Bramwythl" 34 6}
         [+unit]
-            description=_ "Bramwythl the Wose was always considered a slow, taciturn fellow, even by other Woses. More than any other Wose, he enjoyed simply standing alone in the sun, arms upraised, admiring the beauty of the empty sky. Once, even, he confided in a fellow that his greatest wish was to be able to bask forever in the sun’s glory.
+            description=_ "Bramwythl the Wose was always considered a slow, taciturn fellow, even by other woses. More than any other wose, he enjoyed simply standing alone in the sun, arms upraised, admiring the beauty of the empty sky. Once, even, he confided in a fellow that his greatest wish was to be able to bask forever in the sun’s glory.
 
-However, not long after, the local wose community heard of the approach of a horrible monster, powerful enough to easily destroy the few woses that lived in the area. They quickly moved off (quickly for Woses, anyway), but Bramwythl was left behind — in their haste, no one had remembered to find him and tell him of the danger.
+However, not long after, the local wose community heard of the approach of a horrible monster, powerful enough to easily destroy the few woses that lived in the area. They quickly moved off (quickly for woses, anyway), but Bramwythl was left behind — in their haste, no one had remembered to find him and tell him of the danger.
 
 He was taken quite unawares by the Basilisk, and turned to stone before he even recognized the beast. His petrified form still stands there today, warmed by the sun’s rays, under an open sky. His greatest wish has been granted.
 (inscribed by Elvish Pillager)"
