--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Protector.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Protector.cfg
@@ -34,7 +34,7 @@
     {AMLA_DEFAULT}
     cost=18
     usage=mixed fighter
-    description= _ "From the journal of Syniel, the sand skipper:
+    description= _ "From the journal of Syniel, the Sand Skipper:
 
 The orcs ambushed me near the oasis at twilight. I had to flee into the desert, but even there, the wolves were nearly fast enough to keep up with me. I ran and ran for hours until I could barely feel my legs and still, they hounded me under the bright moonlight. I thought that I was dead for sure, but as Eloh would have it, I came across a young Tauroch that had wandered away from her pack. She must have sensed my trouble, for she came to me swiftly and fought beside me all through the long night; beyond exhaustion, we somehow managed to drive off dozens of orcs and wolves by ourselves. By dawn, we were alone, but wounded and weary to our bones with nothing but sand in sight. I used what little remained of my supplies to tend to the Tauroch’s wounds, then I succumbed to fatigue and I remember little after that.
 
