--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -832,7 +832,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         [/message]
         [message]
             speaker=Gwendir
-            message= _ "Ardonna of Tarrynth and Rassin Tabin, you stand convicted of necromancy, and sentenced to death!"
+            message= _ "Ardonna of Tarrynth and Rassin Tabin, you stand convicted of necromancy, and are sentenced to death!"
         [/message]
         [message]
             speaker=Ras-Tabahn
