--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -71,7 +71,7 @@
 
                 {STORY_PART_HAMEL (_ "Who is this annoying chit?")}
 
-                {STORY_PART_TALLIN (_ "This is the famous and benevolent princess Eryssa, in whose rescue we sacrificed many lives and <i>much</i> gold.")}
+                {STORY_PART_TALLIN (_ "This is the famous and benevolent Princess Eryssa, in whose rescue we sacrificed many lives and <i>much</i> gold.")}
 
                 {STORY_PART_ERYSSA (_ "That’s it! I have had enough from you worthless rabble. I will soon send a rider with the promised gold, and in the meantime, I’m leaving!")}
 
