--- a/data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg
@@ -55,7 +55,7 @@
 
         {STORY_PART_TALLIN (_ "I think we have a chance to make some new allies here...")}
 
-        {STORY_PART_HAMEL (_ "Allies? I take it we’re to go to them and ask them to join us in return for our help in rescuing their Princess? You heard their message — those elves have got their noses so high in the air they canna’ see over them. They wouldna’ ally themselves with the likes o’ us.")}
+        {STORY_PART_HAMEL (_ "Allies? I take it we’re to go to them and ask them to join us in return for our help in rescuing their princess? You heard their message — those elves have got their noses so high in the air they canna’ see over them. They wouldna’ ally themselves with the likes o’ us.")}
 
         {STORY_PART_TALLIN (_ "Of course we won’t do that. As a matter of fact I think it’s best that we don’t say anything to the elves at all.")}
 
@@ -401,7 +401,7 @@
         [message]
             speaker=Tallin
             # wmllint: local spelling outta
-            message= _ "(<i>whispering</i>) Later, princess, first let’s get outta — uh, let us take our leave of this place as swiftly as may be!"
+            message= _ "(<i>whispering</i>) Later, Princess, first let’s get outta — uh, let us take our leave of this place as swiftly as may be!"
         [/message]
 
         [message]
