--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -211,7 +211,7 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "Was it really a good idea to send out a raiding party so soon after the orcs just attacked us? Even father is no longer here..."
+            message= _ "Was it really a good idea to send out a raiding party so soon after the orcs just attacked us? Even Father is no longer here..."
         [/message]
 
         [message]
@@ -280,7 +280,7 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "You say that, brother, but you have been very close-mouthed about why the mages sent you home from Alduin. I am beginning to think that you were already dabbling in this witchcraft even before you met that necromancer!"
+            message= _ "You say that, Brother, but you have been very close-mouthed about why the mages sent you home from Alduin. I am beginning to think that you were already dabbling in this witchcraft even before you met that necromancer!"
         [/message]
 
         [message]
@@ -498,7 +498,7 @@
             [else]
                 [message]
                     speaker=Drogan
-                    message= _ "That was bravely done, lad, holding the orcs off by yourself. But I fear the raiding party brings grave news from the north. More warlords have begun to mass armies in the hills, no more than a few days north of the Great River. I do not know if we possess the strength to fight them off."
+                    message= _ "That was bravely done, lad, holding the orcs off by yourself. But I fear the raiding party brings grave news from the north. More warlords have begun to amass armies in the hills, no more than a few days north of the Great River. I do not know if we possess the strength to fight them off."
                 [/message]
 
                 [message]
