--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -851,7 +851,7 @@
         [message]
             speaker=Malin Keshar
             # wmllint: local spelling Zephrin
-            message= _ "O Gods, how did it come to this? My own sister determined to personally see to my demise. Banished from Parthyn, my country, my home... spurned by my people, whom I have given everything for... nothing has gone right ever since I got into an argument with that fat, orc-loving toad Zephrin and tried to curse him. I was only testing my new spell on him! It was only supposed to be a simple curse! How was I supposed to know it would kill him? Blasted Academy."
+            message= _ "O gods, how did it come to this? My own sister determined to personally see to my demise. Banished from Parthyn, my country, my home... spurned by my people, whom I have given everything for... nothing has gone right ever since I got into an argument with that fat, orc-loving toad Zephrin and tried to curse him. I was only testing my new spell on him! It was only supposed to be a simple curse! How was I supposed to know it would kill him? Blasted Academy."
         [/message]
 
         [message]
