--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -322,7 +322,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "... you can’t abandon me too, not the way they did... father, Drogan, Dela..."
+            message= _ "... you can’t abandon me too, not the way they did... Father, Drogan, Dela..."
         [/message]
 
         {MOVE_UNIT (id=Darken Volk) 17 17}
