--- a/data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg
@@ -629,11 +629,22 @@
                 {QUAKE "rumble.ogg"}
                 [message]
                     role=smartelf
-                    #NOTE: Since the elves won't try to escape anymore, what about
-                    #making them act cowardly (maybe with some micro ai) and change
-                    #this message consequently?
                     message= _ "Wait, what’s going on? The volcano is going to erupt! Everyone, try to get out of these caves!"
                 [/message]
+
+                [micro_ai]
+                    side=2
+                    action=add
+                    ai_type=coward
+
+                    [filter]
+                        side=2
+                    [/filter]
+                    distance=15
+                    seek_x,seek_y=15,1
+                    avoid_x,avoid_y=18,23
+                [/micro_ai]
+
                 # once they try to escape, if they move to the top 2 rows you lose
                 # deactivated out since there's no way for the player to
                 # stop them from moving to those locations
