Dark Forecast: fix extra boss spawns not occurring

--- a/data/multiplayer/scenarios/2p_Dark_Forecast.cfg
+++ b/data/multiplayer/scenarios/2p_Dark_Forecast.cfg
@@ -187,6 +187,14 @@ The weather will also change randomly, affecting the layout of the map.
     [/event]
 
     [event]
+        name="turn 1"
+        [set_variable]
+            name="next_final_spawn"
+            value="$($final_turn + 2)"
+        [/set_variable]
+    [/event]
+
+    [event]
         name=last breath
         first_time_only=no
         [filter]
