THoT S9: Add note to clarify victory objective.
https://forums.wesnoth.org/viewtopic.php?f=32&t=48451

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/09_Forbidden_Forest.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/09_Forbidden_Forest.cfg
@@ -148,6 +148,10 @@
 
             {TURNS_RUN_OUT}
 
+            [note]
+                description=_ "To win, either move Aiglondor to the signpost and Angarthing next to him, or move Angarthing to the signpost and Aiglondur next to him."
+            [/note]
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
