ANL: lose MP when freeing captured unit
This is the old behavior, which was lost when assigning the prisoner side to
both teams.

--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -223,6 +223,15 @@
         [unstore_unit]
             variable=critter
         [/unstore_unit]
+
+        # Lose all moves.
+        [set_variable]
+            name=unit.moves
+            value=0
+        [/set_variable]
+        [unstore_unit]
+            variable=unit
+        [/unstore_unit]
     [/event]
 #enddef
 
