updated Dutch translation

--- a/data/core/about_i18n.cfg
+++ b/data/core/about_i18n.cfg
@@ -325,7 +325,7 @@ sort=yes
     title = _"Dutch Translation"
     [entry]
         name = "Alexander van Gessel (AI/AI0867)"
-        comment = "Maintainer of the Dutch translation."
+        comment = "previous translation maintainer"
         email = "AI0867_AT_gmail.com"
     [/entry]
     [entry]
@@ -361,6 +361,10 @@ sort=yes
     [/entry]
     [entry]
         name = "Maarten Albrecht"
+    [/entry]
+    [entry]
+        name = "Merijn de Vet"
+        comment = "translation maintainer"
     [/entry]
     [entry]
         name = "Pieter Vermeylen (Onne)"
